// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeMethodTableHeaderButtonOptions should normalize complex method table header button options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": null,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "icon": "add",
  "kind": "method",
  "label": "Sync",
  "method": {
    "import": {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/test",
      "name": "Test",
      "namedImport": null,
      "namespaceImport": null,
    },
    "kind": "import",
  },
  "name": "sync",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "refresh": false,
  "replace": false,
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": null,
}
`;

exports[`NormalizeMethodTableHeaderButtonOptions should normalize minimal method table header button options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": null,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "icon": "add",
  "kind": "method",
  "label": null,
  "method": {
    "import": {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/test",
      "name": "Test",
      "namedImport": null,
      "namespaceImport": null,
    },
    "kind": "import",
  },
  "name": "refresh",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "refresh": false,
  "replace": false,
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": null,
}
`;
